[gd_scene load_steps=3 format=3 uid="uid://3oo2g7dj6p3r"]

[ext_resource type="Script" path="res://time_input.gd" id="1_2u8du"]

[sub_resource type="LabelSettings" id="LabelSettings_gfwpv"]
font_size = 32

[node name="TimeInput" type="CenterContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2u8du")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="TimeLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "00:00:00"
label_settings = SubResource("LabelSettings_gfwpv")

[node name="GridContainer" type="GridContainer" parent="VBoxContainer"]
layout_mode = 2
columns = 3

[node name="7Button" type="Button" parent="VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "7"

[node name="8Button" type="Button" parent="VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "8"

[node name="9Button" type="Button" parent="VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "9"

[node name="4Button" type="Button" parent="VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "4"

[node name="5Button" type="Button" parent="VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "5"

[node name="6Button" type="Button" parent="VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "6"

[node name="1Button" type="Button" parent="VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "1"

[node name="2Button" type="Button" parent="VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "2"

[node name="3Button" type="Button" parent="VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "3"

[node name="CancelButton" type="Button" parent="VBoxContainer/GridContainer"]
layout_mode = 2
text = "X"

[node name="0Button" type="Button" parent="VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "0"

[node name="00Button" type="Button" parent="VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "00
"

[node name="DoneButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Done"

[connection signal="pressed" from="VBoxContainer/GridContainer/7Button" to="." method="_on_7button_pressed"]
[connection signal="pressed" from="VBoxContainer/GridContainer/8Button" to="." method="_on_8button_pressed"]
[connection signal="pressed" from="VBoxContainer/GridContainer/9Button" to="." method="_on_9button_pressed"]
[connection signal="pressed" from="VBoxContainer/GridContainer/4Button" to="." method="_on_4button_pressed"]
[connection signal="pressed" from="VBoxContainer/GridContainer/5Button" to="." method="_on_5button_pressed"]
[connection signal="pressed" from="VBoxContainer/GridContainer/6Button" to="." method="_on_6button_pressed"]
[connection signal="pressed" from="VBoxContainer/GridContainer/1Button" to="." method="_on_1button_pressed"]
[connection signal="pressed" from="VBoxContainer/GridContainer/2Button" to="." method="_on_2button_pressed"]
[connection signal="pressed" from="VBoxContainer/GridContainer/3Button" to="." method="_on_3button_pressed"]
[connection signal="pressed" from="VBoxContainer/GridContainer/CancelButton" to="." method="_on_cancel_button_pressed"]
[connection signal="pressed" from="VBoxContainer/GridContainer/0Button" to="." method="_on_0button_pressed"]
[connection signal="pressed" from="VBoxContainer/GridContainer/00Button" to="." method="_on_00button_pressed"]
[connection signal="pressed" from="VBoxContainer/DoneButton" to="." method="_on_done_button_pressed"]
